--- a/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/all_experiments_custom_list.xml
@@ -13,14 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:orientation="vertical">
-    <TextView
-        android:id="@+id/allExpNameText"
-        android:layout_width="284dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:text="Experiment Name"
-        android:textSize="25sp"></TextView>
+
+        <TextView
+            android:id="@+id/allExpNameText"
+            android:layout_width="284dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="30dp"
+            android:text="@string/experiment_name"
+            android:textSize="25sp"></TextView>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,15 +31,14 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:text="MinTrials" ></TextView>
+            android:text="@string/mintrials" ></TextView>
+
             <TextView
                 android:id="@+id/region_text"
                 android:layout_width="164dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="0dp"
-                android:layout_marginLeft="0dp"
-                android:text="Region" ></TextView>
+                android:text="@string/region"></TextView>
         </LinearLayout>
     </LinearLayout>
 
@@ -49,6 +48,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginTop="5dp"
-        android:text="Subscribe" />
+        android:text="@string/subscribe" />
 
 </LinearLayout>
