--- a/CrowderApp/app/src/main/res/layout/my_experiments_custom_list.xml
+++ b/CrowderApp/app/src/main/res/layout/my_experiments_custom_list.xml
@@ -18,8 +18,7 @@
             android:layout_width="330dp"
             android:layout_height="40dp"
             android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:text="Experiment Name"
+            android:text="@string/experiment_name"
             android:textSize="25sp"></TextView>
 
         <LinearLayout
@@ -32,16 +31,14 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
-                android:layout_marginLeft="30dp"
-                android:text="MinTrials"></TextView>
+                android:text="@string/mintrials"></TextView>
 
             <TextView
                 android:id="@+id/region_text"
                 android:layout_width="164dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
-                android:layout_marginLeft="0dp"
-                android:text="Region"></TextView>
+                android:text="@string/region"></TextView>
         </LinearLayout>
     </LinearLayout>
 
